--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
     -->
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
         <div id='qrcode'></div>
-        <q>Aren't you just <b>bored</b> with all those slides-based presentations?</q>
+        <q>Just Scan the QR code using the Wechat OR some other TOOLs</q>
+        <q>And enjoy it !</q>
     </div>
 
     <!--
